# object_detector

object_detector_msgs/: CMakeLists.txt  package.xml
object_detector_msgs/msg/: ObjectPositionWithImage.msg  ObjectPositionsWithImage.msg
point_cloud_object_detector/: CMakeLists.txt
point_cloud_object_detector/config/params/: object_classes.yaml
point_cloud_object_detector/include/point_cloud_object_detector/: point_cloud_object_detector.h
point_cloud_object_detector/launch/: point_cloud_object_detector.launch  point_cloud_object_detector_test.launch
point_cloud_object_detector/src/: point_cloud_object_detector.cpp
